<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="fcm_sender_id">368319224253</string>
    <string name="app_name">STD Tx Guide</string>
    <string name="title_section1">Condition Quick Pick</string>
    <string name="title_section2">Terms and Abbreviations</string>
    <string name="title_section3">Full Guidelines</string>
    <string name="title_section4">Taking a Sexual History</string>
    <string name="title_section5">References</string>
    <string name="title_section6">About</string>
    <string name="title_section7">User License Agreement</string>
    <string name="title_section8">Settings</string>
    <string name="title_section9">Support</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_version">Version Info</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="cd_navdrawer_image">Navigation Drawer Image</string>
    <string name="title_activity_condition_list">Condition Quick Pick</string>
    <string name="title_activity_condition_details">Condition Details</string>
    <string name="title_activity_settings">Settings</string>
    <string name="allow_push_notifications">Allow Push Notifications</string>
    <string name="title_transition">Title Transition</string>
    <string name="title_activity_pdf">PDFActivity</string>
    <string name="title_activity_eula">EulaActivity</string>
    <string name="title_activity_splash_screen">STD Tx Guide</string>
    <string name="splash_screen_image">Splash screen image</string>
    <string name="i_agree">I Agree</string>
    <string name="condition">Condition</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="help">Help</string>
    <string name="share">Share</string>

</resources>
