<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_condition_quick_pick"
            android:title="@string/title_section1"/>
        <item
            android:id="@+id/nav_terms_and_abbreviations"
            android:title="@string/title_section2"/>
        <item
            android:id="@+id/nav_full_guidelines"
            android:title="@string/title_section3"/>
        <item
            android:id="@+id/nav_sexual_history"
            android:title="@string/title_section4"
            android:icon="@drawable/ic_history"/>
        <item
            android:id="@+id/nav_about_us"
            android:title="@string/title_section6"
            android:icon="@drawable/ic_about"/>
        <item
            android:id="@+id/nav_help"
            android:title="Help"
            android:icon="@drawable/ic_help"/>
        <item
            android:id="@+id/nav_license_agreement"
            android:title="@string/title_section7"
            android:icon="@drawable/ic_feedback"/>
        <item
            android:id="@+id/nav_settings"
            android:title="@string/title_section8"
            android:icon="@drawable/ic_settings"/>

    </group>
</menu>